fix up file list styling for margins and overflow

--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -4,8 +4,7 @@
 edit()
 
 // mobile breakpoint
-BP_1 = 43em
-BP_2 = 31em
+BP = 43em
 
 // fontstants
 SIZE = 16
@@ -87,7 +86,7 @@ navLinkPad = ( navHt - navLinkHt )/( 2 * navLinkHt )
   padding-top navLinkPad
   padding-bottom navLinkPad
   span
-    +below(BP_1)
+    +below(BP)
       display none
 // end main nav
 
@@ -97,14 +96,14 @@ navLinkPad = ( navHt - navLinkHt )/( 2 * navLinkHt )
 #information
   col(1/3)
   shift(1/3)
-  +below(BP_1)
+  +below(BP)
     unshift()
     stack()
 
 #caution
   col(1/3)
   shift(-1/3)
-  +below(BP_1)
+  +below(BP)
     unshift()
     stack()
   ul
@@ -112,7 +111,7 @@ navLinkPad = ( navHt - navLinkHt )/( 2 * navLinkHt )
 
 #sample
   col(1/3)
-  +below(BP_1)
+  +below(BP)
     stack()
 // end top row
 
@@ -149,7 +148,8 @@ navLinkPad = ( navHt - navLinkHt )/( 2 * navLinkHt )
   center(56em)
 
 .UploadList--item
-  margin-tb 1em
+  overflow hidden
+  margin-bottom 1em
 
 .UploadList--filename
   float left
@@ -182,12 +182,12 @@ select.UploadList--text
 
 .BoardContainer
   col(.5)
-  +below(BP_2)
+  +below(BP)
     col()
 
 .LayerContainer
   col(1/4)
-  +below(BP_2)
+  +below(BP)
     col(1/2)
 
 .LayerImage
@@ -201,9 +201,12 @@ select.UploadList--text
 
 
 // footer
+footer
+  col()
+  margin 1em 0 0 0
 .Foot--links
-  align()
   a
+    display inline-block
     margin 1em
 // end footer
 
